# PROGRAMSTART

./: .gitattributes  .gitignore  .gitlint  .pre-commit-config.yaml  .secrets.baseline  .yamllint  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  PROGRAMSTART.code-workspace  QUICKSTART.md  README.md  SECURITY.md  apr13report.md  enhanceopportunity.md  improvegameplan.md  mkdocs.yml  n8n.md  noxfile.py  promptaudit.md  promptingguidelines.md  pyproject.toml  requirements.txt  stage3gameplan.md  stage5gameplan.md  stage6gameplan.md  stage7gameplan.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.tmp_factory_audit/: .editorconfig  .gitattributes  .pre-commit-config.yaml  QUICKSTART.md  README.md  SECURITY.md  mkdocs.yml  noxfile.py  pyproject.toml
PROGRAMBUILD/: ARCHITECTURE.md  AUDIT_REPORT.md  DECISION_LOG.md  FEASIBILITY.md  POST_LAUNCH_REVIEW.md  PROGRAMBUILD.md  PROGRAMBUILD_ADR_TEMPLATE.md  PROGRAMBUILD_CANONICAL.md  PROGRAMBUILD_CHALLENGE_GATE.md  PROGRAMBUILD_CHANGELOG.md  PROGRAMBUILD_CHECKLIST.md  PROGRAMBUILD_ENTERPRISE.md  PROGRAMBUILD_FILE_INDEX.md  PROGRAMBUILD_GAMEPLAN.md  PROGRAMBUILD_IDEA_INTAKE.md  PROGRAMBUILD_KICKOFF_PACKET.md  PROGRAMBUILD_LITE.md  PROGRAMBUILD_PRODUCT.md  PROGRAMBUILD_STATE.json  PROGRAMBUILD_SUBAGENTS.md  RELEASE_READINESS.md  REQUIREMENTS.md  RESEARCH_SUMMARY.md  RISK_SPIKES.md  TEST_STRATEGY.md  USER_FLOWS.md
USERJOURNEY/: ACCEPTANCE_CRITERIA.md  ADDITIONAL_SUGGESTIONS.md  ANALYTICS_AND_OUTCOMES.md  DELIVERY_GAMEPLAN.md  EXECUTION_SLICES.md  EXTERNAL_REVIEW_PACKET.md  FILE_BY_FILE_IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_TRACKER.md  LEGAL_AND_CONSENT.md  OPEN_QUESTIONS.md  PRODUCT_SPEC.md  README.md  REUSE_STRATEGY.md  ROUTE_AND_STATE_FREEZE.md  SCREEN_INVENTORY.md  STATES_AND_RULES.md  USERJOURNEY_INTEGRITY_REFERENCE.json  USERJOURNEY_STATE.json  USERJOURNEY_TEMPLATE_STARTER.md  USER_FLOWS.md  UX_COPY_DRAFT.md
config/: knowledge-base.json  process-registry.json  prompt-eval-scenarios.json
dashboard/: app.js  index.html  style.css
docs/: context-layer.md  dashboard-api.md  defaults-review.md  index.md  knowledge-base.md  knowledge-ops.md  retrieval-architecture.md  reusable-patterns.md  toolchain.md
docs/decisions/: README.md  (+22 more)
outputs/: MANIFEST_2026-03-27.txt  MANIFEST_2026-03-28.txt  STATUS_DASHBOARD.md  VERIFICATION_REPORT_2026-03-27.md  VERIFICATION_REPORT_2026-03-28.md
schemas/: knowledge-base.schema.json  process-registry.schema.json  programbuild-state.schema.json  prompt-eval-scenarios.schema.json  userjourney-state.schema.json
scripts/: check_commit_msg.py  check_process_registry_schema.py  install_hooks.py  lint_prompts.py  programstart_attach.py  programstart_backup.py  programstart_bootstrap.py  programstart_clean.py  programstart_cli.py  programstart_cli_smoke.py  programstart_closeout.py  programstart_command_registry.py  programstart_common.py  programstart_context.py  programstart_create.py  programstart_create_core.py  programstart_create_output.py  programstart_dashboard.py  programstart_dashboard_browser_smoke.py  programstart_dashboard_golden.py  programstart_dashboard_smoke.py  programstart_dashboard_smoke_readonly.py  programstart_dist_smoke.py  programstart_doctor.py  programstart_drift_check.py  programstart_factory_smoke.py  programstart_health_probe.py  programstart_impact.py  programstart_init.py  programstart_log.py  programstart_markdown_parsers.py  programstart_models.py  programstart_mutation_edit_hook.py  programstart_mutation_loop.py  programstart_precommit_validate.py  programstart_prompt_build.py  programstart_prompt_eval.py  programstart_recommend.py  programstart_refresh_integrity.py  programstart_repo_clean_check.py  (+11 more)
tests/: conftest.py  test_audit_fixes.py  test_check_commit_msg.py  test_check_process_registry_schema.py  test_hypothesis_retrieval.py  test_install_hooks.py  test_instruction_enforcement.py  test_lint_prompts.py  test_performance_benchmarks.py  test_phase_k.py  test_phase_l.py  test_platform_hygiene.py  test_programstart_attach.py  test_programstart_backup.py  test_programstart_bootstrap.py  test_programstart_clean.py  test_programstart_cli.py  test_programstart_closeout.py  test_programstart_command_registry.py  test_programstart_common.py  test_programstart_context.py  test_programstart_create.py  test_programstart_create_core.py  test_programstart_create_output.py  test_programstart_dashboard.py  test_programstart_dashboard_golden.py  test_programstart_dashboard_smoke_readonly.py  test_programstart_dashboard_userjourney.py  test_programstart_doctor.py  test_programstart_drift_check.py  test_programstart_factory_smoke.py  test_programstart_health_probe.py  test_programstart_impact.py  test_programstart_init.py  test_programstart_log.py  test_programstart_markdown_parsers.py  test_programstart_models.py  test_programstart_mutation_edit_hook.py  test_programstart_mutation_loop.py  test_programstart_precommit_validate.py  (+34 more)
(+235 files in other folders)
